Fix font size error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,13 @@ SET(PAGE_RANGE "PageRange")
 SET(TESS_DATA "TessData")
 SET(PROGRESS_INFO "ProgressInfo")
 SET(TESS_LANG "eng")
+SET(PDF_POST_PROCESS "PdfPostProcess")
+
+IF(WIN32)
+ADD_DEFINITIONS(-DWIN32)
+INCLUDE_DIRECTORIES(/usr/i686-w64-mingw32/sys-root/mingw/include)
+ENDIF(WIN32)
+
 CONFIGURE_FILE(
   "Config.h.in"
   "Config.h"
@@ -27,6 +34,8 @@ PKG_CHECK_MODULES(TESSERACT tesseract)
 SET(PODOFO_LDFLAGS -lpodofo)
 
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${TESSERACT_INCLUDE_DIRS}) 
+
+
 SET(CMAKE_AUTOMOC ON)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5Xml REQUIRED)
@@ -35,10 +44,12 @@ PKG_CHECK_MODULES(POPPLER REQUIRED poppler-qt5)
 INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})
 SET(ImageReader_LIBS ${POPPLER_LDFLAGS} ${PODOFO_LDFLAGS})
 
+
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} Config.h)
 
 # Files
-ADD_DEFINITIONS(-DDEBUG -DWINDOWS)
+ADD_DEFINITIONS(-DDEBUG )
+
 
 FILE(GLOB ImageReader_SRCS
  *.cc	
@@ -71,3 +82,4 @@ ENDIF(NOT MINGW)
 
 TARGET_LINK_LIBRARIES(EndProcess Qt5::Widgets Qt5::Xml Qt5::PrintSupport pthread)
 TARGET_LINK_LIBRARIES(FrontUI pthread)
+
