finish commit dameon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,24 +17,29 @@ SET(PROGRESS_INFO "ProgressInfo")
 SET(TESS_LANG "eng")
 SET(PDF_POST_PROCESS "PdfPostProcess")
 
-IF(WIN32)
-ADD_DEFINITIONS(-DWIN32)
-INCLUDE_DIRECTORIES(/usr/i686-w64-mingw32/sys-root/mingw/include)
-ENDIF(WIN32)
-
 CONFIGURE_FILE(
   "Config.h.in"
   "Config.h"
 )
 
+# Files
+ADD_DEFINITIONS(-DDEBUG )
+
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR})
+IF(NOT MSVC)
+IF(WIN32)
+ADD_DEFINITIONS(-DWIN32)
+INCLUDE_DIRECTORIES(/usr/i686-w64-mingw32/sys-root/mingw/include)
+ENDIF(WIN32)
 
 # Dependencies
 FIND_PACKAGE(PkgConfig REQUIRED)
 PKG_CHECK_MODULES(TESSERACT tesseract)
+#EXIT()
+
 SET(PODOFO_LDFLAGS -lpodofo)
 
-INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR} ${TESSERACT_INCLUDE_DIRS}) 
-
+INCLUDE_DIRECTORIES(${TESSERACT_INCLUDE_DIRS})
 
 SET(CMAKE_AUTOMOC ON)
 FIND_PACKAGE(Qt5Widgets REQUIRED)
@@ -44,15 +49,8 @@ PKG_CHECK_MODULES(POPPLER REQUIRED poppler-qt5)
 INCLUDE_DIRECTORIES(${POPPLER_INCLUDE_DIRS})
 SET(ImageReader_LIBS ${POPPLER_LDFLAGS} ${PODOFO_LDFLAGS})
 
-
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR} Config.h)
-
-# Files
-ADD_DEFINITIONS(-DDEBUG )
-
-
 FILE(GLOB ImageReader_SRCS
- *.cc	
+ *.cc
 )
 LIST(SORT ImageReader_SRCS)
 FILE(GLOB ImageReader_HDRS
@@ -82,4 +80,6 @@ ENDIF(NOT MINGW)
 
 TARGET_LINK_LIBRARIES(EndProcess Qt5::Widgets Qt5::Xml Qt5::PrintSupport pthread)
 TARGET_LINK_LIBRARIES(FrontUI pthread)
-
+ELSE(NOT MSVC)
+ADD_EXECUTABLE(FrontUI front.cpp Interprocess.hh)
+ENDIF(NOT MSVC)
