--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,11 @@ SET(PODOFO_LDFLAGS -lpodofo)
 INCLUDE_DIRECTORIES(${TESSERACT_INCLUDE_DIRS})
 
 SET(CMAKE_AUTOMOC ON)
+
+FIND_PACKAGE(OpenMP REQUIRED)
+SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+
 FIND_PACKAGE(Qt5Widgets REQUIRED)
 FIND_PACKAGE(Qt5Xml REQUIRED)
 FIND_PACKAGE(Qt5PrintSupport REQUIRED)
